--- a/style.css
+++ b/style.css
@@ -58,13 +58,21 @@ body {
     justify-content: center;
     align-items: center;
 }
-
+.button:hover {
+    transform: scale(1.1);
+}
+.buttonzero:hover {
+    transform: scale(1.1);
+}
+.buttondelete:hover {
+    transform: scale(1.1);
+}
 .button.operator {
     background-color: rgba(207, 142, 2, 0.989);
 }
 
 .buttonzero {
-    grid-column: span ;
+    grid-column: span;
     border-radius: 25%;
     font-size: 0.90em;
     cursor: pointer;
